--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Steven Straatemans</title>
-    <link rel="stylesheet" type="text/css" href="theme.css" />
+    <link rel="stylesheet" type="text/css" href="src/index.css" />
   </head>
   <body>
     <h1>My name is Steven!</h1>
@@ -70,5 +71,6 @@
       </li>
       <li class="spacer"></li>
     </ul>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
