move index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Steven Straatemans</title>
-    <link rel="stylesheet" type="text/css" href="src/index.css" />
+    <link rel="stylesheet" type="text/css" href="../src/index.css" />
   </head>
   <body>
     <h1>My name is Steven!</h1>
@@ -71,6 +71,6 @@
       </li>
       <li class="spacer"></li>
     </ul>
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
