--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,6 @@
       </li>
       <li class="spacer"></li>
     </ul>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
