--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Steven Straatemans</title>
+    <title>Steven Straatemans | Frontend developer</title>
+    <!--<link
+      href="https://fonts.googleapis.com/css2?family=Waiting+for+the+Sunrise&display=swap"
+      rel="stylesheet"
+    />-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <h1>My name is Steven!</h1>
-    <h3>And I'm a mighty <s>pirate</s> frontend developer</h3>
+    <h3>And I'm a mighty <s>pirate</s> frontend developarrr</h3>
 
     <ul class="social">
       <li class="spacer"></li>
