--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,6 @@
         <li class="spacer"></li>
       </ul>
     </footer>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.ts"></script>
   </body>
 </html>
