--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="index.scss" />
   </head>
   <body>
     <main>
       <h1 class="header">My name is Steven Straatemans</h1>
-      <p class="text">
+      <p class="text rollwrapper">
         And I'm a <span class="roll">mighty</span><br /><span class="roll"
           >pirate</span
         >
