--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <main>
       <h1 class="header">My name is Steven Straatemans</h1>
       <p class="text rollwrapper">
-        And I'm a <span class="roll">mighty</span><br /><span class="roll"
-          >pirate</span
+        And I'm a <span class="roll">fanatic</span><br /><span class="roll"
+          >frontend developer</span
         >
 
         <button class="caret"><img src="caret.svg" /></button>
